--- a/applicative-lens.cabal
+++ b/applicative-lens.cabal
@@ -28,25 +28,15 @@ Flag UseVanLaarhoven
   Default:     False 
 
 
--- Executable bench
---   Main-is: Examples/Bench.hs
---   Build-Depends: base >=4.7, containers >=0.5, mtl >=2.2, deepseq >= 1.3, criterion >= 1.1
-
---   if flag(useVanLaarhoven)
---      build-depends: lens >= 4.11 
---      cpp-options: -D__USE_VAN_LAARHOVEN__
-
---   GHC-Options: -O2 -rtsopts 
-  
---   default-language:    Haskell2010
-
-
-
 
 Library
-  exposed-modules: Data.ApplicativeLens, Data.ApplicativeLens.Exception
+  exposed-modules:
+    Data.ApplicativeLens, 
+    Data.ApplicativeLens.Exception
   
-  other-modules: Data.ApplicativeLens.Core, Data.ApplicativeLens.Util 
+  other-modules: 
+    Data.ApplicativeLens.Core, 
+    Data.ApplicativeLens.Util 
   
   if flag(useVanLaarhoven)
     build-depends: lens >= 4.11 
@@ -55,13 +45,60 @@ Library
   else
     other-modules: Data.ApplicativeLens.Lens
 
-  other-extensions:    RankNTypes, LambdaCase, NoMonomorphismRestriction, FlexibleInstances, FlexibleContexts, UndecidableInstances, IncoherentInstances, CPP, ExistentialQuantification, DeriveDataTypeable, DeriveFunctor, DeriveFoldable, DeriveTraversable
+  other-extensions:    
+    RankNTypes, LambdaCase, NoMonomorphismRestriction, 
+    FlexibleInstances, FlexibleContexts, UndecidableInstances, 
+    IncoherentInstances, CPP, ExistentialQuantification, 
+    DeriveDataTypeable, DeriveFunctor, DeriveFoldable, DeriveTraversable
   
-  build-depends:       base >=4.7, containers >=0.5, mtl >=2.2
+  build-depends:  
+    base       >=4.7 && < 5, 
+    containers >=0.5 && < 1, 
+    mtl        >=2.2 && < 3
   
   GHC-Options: -O2 -rtsopts 
 
   default-language:    Haskell2010
 
-  
-  
+Benchmark compositions
+  type: exitcode-stdio-1.0
+  Main-is: Bench/Compositions.hs
+  Build-Depends: 
+     applicative-lens, 
+     base,
+     mtl, 
+     containers, 
+     deepseq >= 1.3 && < 2, 
+     criterion >= 1.1 && < 2
+
+  if flag(useVanLaarhoven)
+    build-depends: lens >= 4.11 && < 5
+    cpp-options: -D__USE_VAN_LAARHOVEN__
+
+  GHC-Options: -O2 -rtsopts 
+  default-language:    Haskell2010
+
+Benchmark eval
+  type: exitcode-stdio-1.0
+  Main-is: Bench/Eval.hs
+  Build-Depends: 
+     applicative-lens, 
+     base,
+     mtl, 
+     containers, 
+     deepseq >= 1.3 && < 2, 
+     criterion >= 1.1 && < 2
+
+  other-modules: 
+     Examples.Evaluator
+
+  if flag(useVanLaarhoven)
+    build-depends: lens >= 4.11 && < 5
+    cpp-options: -D__USE_VAN_LAARHOVEN__
+
+  GHC-Options: -O2 -rtsopts 
+  default-language:    Haskell2010
+
+
+
+
