--- a/app-lens.cabal
+++ b/app-lens.cabal
@@ -1,4 +1,4 @@
-name:                applicative-lens
+name:                app-lens
 
 -- The package version.  See the Haskell package versioning policy (PVP) 
 -- for standards guiding when and how versions should be incremented.
@@ -25,7 +25,7 @@ description:
    > unlinesH (x:xs) = lift2 catLineL x (unlinesH xs)
    > 
    > catLineL :: Lens (String, String) String
-   > catLineL = ... {- some appropriate definition -} ...
+   > catLineL = {- some appropriate definition -}
    . 
    As you can see, we can use the binary lens @catLineL@ as a binary
    function via a lifting function @lift2@, and construct an involved
@@ -52,19 +52,17 @@ Flag UseVanLaarhoven
 
 Library
   exposed-modules:
-    Data.ApplicativeLens, 
-    Data.ApplicativeLens.Exception
+    Control.LensFunction, 
+    Control.LensFunction.Exception
   
   other-modules: 
-    Data.ApplicativeLens.Core, 
-    Data.ApplicativeLens.Util 
+    Control.LensFunction.Core, 
+    Control.LensFunction.Util 
+    Control.LensFunction.Internal    
   
   if flag(useVanLaarhoven)
-    build-depends: lens >= 4.11 
-    other-modules: Data.ApplicativeLens.LLens
+    other-modules: Control.LensFunction.InternalL
     cpp-options: -D__USE_VAN_LAARHOVEN__
-  else
-    other-modules: Data.ApplicativeLens.Lens
 
   other-extensions:    
     RankNTypes, LambdaCase, NoMonomorphismRestriction, 
@@ -73,9 +71,10 @@ Library
     DeriveDataTypeable, DeriveFunctor, DeriveFoldable, DeriveTraversable
   
   build-depends:  
-    base       >=4.7 && < 5, 
-    containers >=0.5 && < 1, 
-    mtl        >=2.2 && < 3
+    base       >=4.7   && < 5, 
+    containers >=0.5   && < 1, 
+    mtl        >=2.2   && < 3,
+    lens       >=4.11  && < 5
   
   GHC-Options: -O2 -rtsopts 
 
@@ -89,11 +88,12 @@ Benchmark compositions
      base,
      mtl, 
      containers, 
+     lens, 
      deepseq >= 1.3 && < 2, 
      criterion >= 1.1 && < 2
 
+
   if flag(useVanLaarhoven)
-    build-depends: lens >= 4.11 && < 5
     cpp-options: -D__USE_VAN_LAARHOVEN__
 
   GHC-Options: -O2 -rtsopts 
@@ -107,6 +107,7 @@ Benchmark eval
      base,
      mtl, 
      containers, 
+     lens,
      deepseq >= 1.3 && < 2, 
      criterion >= 1.1 && < 2
 
@@ -114,7 +115,6 @@ Benchmark eval
      Examples.Evaluator
 
   if flag(useVanLaarhoven)
-    build-depends: lens >= 4.11 && < 5
     cpp-options: -D__USE_VAN_LAARHOVEN__
 
   GHC-Options: -O2 -rtsopts 
