--- a/app-lens.cabal
+++ b/app-lens.cabal
@@ -64,9 +64,31 @@ Library
     mtl        >=2.2   && < 3,
     lens       >=4.11  && < 5
   
-  GHC-Options: -O2 -rtsopts 
+  ghc-options: -O2 -rtsopts 
+
+  ghc-prof-options: -prof -auto-all -rtsopts 
 
   default-language:    Haskell2010
+
+Executable prof
+  Main-is: Bench/Prof.hs
+  Build-Depends:
+     app-lens, 
+     base,
+     mtl, 
+     containers, 
+     lens, 
+     deepseq >= 1.3 && < 2, 
+     criterion >= 1.1 && < 2
+
+
+  if flag(useVanLaarhoven)
+    cpp-options: -D__USE_VAN_LAARHOVEN__
+
+  ghc-options: -O2 -rtsopts 
+  ghc-prof-options: -prof -auto-all -rtsopts "-with-rtsopts=-p -s"
+  default-language:    Haskell2010
+
 
 Benchmark compositions
   type: exitcode-stdio-1.0
@@ -84,7 +106,8 @@ Benchmark compositions
   if flag(useVanLaarhoven)
     cpp-options: -D__USE_VAN_LAARHOVEN__
 
-  GHC-Options: -O2 -rtsopts 
+  ghc-options: -O2 -rtsopts 
+  ghc-prof-options: -prof -auto-all -rtsopts 
   default-language:    Haskell2010
 
 Benchmark eval
@@ -105,7 +128,8 @@ Benchmark eval
   if flag(useVanLaarhoven)
     cpp-options: -D__USE_VAN_LAARHOVEN__
 
-  GHC-Options: -O2 -rtsopts 
+  ghc-options: -O2 -rtsopts 
+  ghc-prof-options: -prof -auto-all -rtsopts 
   default-language:    Haskell2010
 
 
