--- a/app-lens.cabal
+++ b/app-lens.cabal
@@ -1,6 +1,6 @@
-name:                app-lens
-version:             0.1.0.0
-synopsis: Applicative Bidirectional Programming with Lenses.
+name:     app-lens
+version:  0.1.0.0
+synopsis: Applicative Bidirectional Programming with Lenses
 
 description:         
    This module provides an "applicative" way of composing lenses through
@@ -30,21 +30,29 @@ description:
    >>> ["banana", "orange", "apple"] ^. unlinesL
    "banana\norange\napple\n"
    >>> ["banana", "orange", "apple"] & unlinesL .~ "Banana\nOrange\nApple\n"
-   ["Banana", "Orange", "Apple"]
+   ["Banana","Orange","Apple"]
     
 
 
 license:             BSD3
 license-file:        LICENSE
 
+homepage:            https://bitbucket.org/kztk/app-lens
+bug-reports:         https://bitbucket.org/kztk/app-lens/issues
+tested-with:         GHC == 7.8.3
+
+
 author:              Kazutaka Matsuda
+copyright:           (c) Kazutaka Matsuda, 2015
 maintainer:          kztk@ecei.tohoku.ac.jp
-category:            Control
+category:            Data, Lenses
 build-type:          Simple
 cabal-version:       >=1.10
 
+
+
 Flag UseVanLaarhoven
-  Description: Use lens package as an internal implementation of lens
+  Description: Use Control.Lens.Lens' as internal representations.
   Default:     False 
 
 Library
@@ -62,41 +70,41 @@ Library
     cpp-options: -D__USE_VAN_LAARHOVEN__
 
   other-extensions:    
-    RankNTypes, LambdaCase, NoMonomorphismRestriction, 
+    RankNTypes, NoMonomorphismRestriction, 
     FlexibleInstances, FlexibleContexts, UndecidableInstances, 
     IncoherentInstances, CPP, ExistentialQuantification, 
     DeriveDataTypeable, DeriveFunctor, DeriveFoldable, DeriveTraversable
   
   build-depends:  
-    base       >=4.7   && < 5, 
-    containers >=0.5   && < 1, 
-    mtl        >=2.2   && < 3,
-    lens       >=4.11  && < 5
+    base       >=4.7   && < 4.8, 
+    containers >=0.5   && < 0.6, 
+    mtl        >=2.2   && < 2.3,
+    lens       >=4     && < 4.12
   
-  ghc-options: -O2 -rtsopts 
+  ghc-options: -O2 
 
   ghc-prof-options: -prof -auto-all -rtsopts 
 
-  default-language:    Haskell2010
+  default-language: Haskell2010
 
-Executable prof
-  Main-is: Bench/Prof.hs
-  Build-Depends:
-     app-lens, 
-     base,
-     mtl, 
-     containers, 
-     lens, 
-     deepseq >= 1.3 && < 2, 
-     criterion >= 1.1 && < 2
-
-
-  if flag(useVanLaarhoven)
-    cpp-options: -D__USE_VAN_LAARHOVEN__
-
-  ghc-options: -O2 -rtsopts 
-  ghc-prof-options: -prof -auto-all -rtsopts "-with-rtsopts=-p -s"
-  default-language:    Haskell2010
+-- Executable prof
+--   Main-is: Bench/Prof.hs
+--   Build-Depends:
+--      app-lens, 
+--      base,
+--      mtl, 
+--      containers, 
+--      lens, 
+--      deepseq >= 1.3 && < 2, 
+--      criterion >= 1.1 && < 2
+--
+--
+--   if flag(useVanLaarhoven)
+--     cpp-options: -D__USE_VAN_LAARHOVEN__
+--
+--   ghc-options: -O2 -rtsopts 
+--   ghc-prof-options: -prof -auto-all -rtsopts "-with-rtsopts=-p -s"
+--   default-language:    Haskell2010
 
 
 Benchmark compositions
@@ -108,8 +116,8 @@ Benchmark compositions
      mtl, 
      containers, 
      lens, 
-     deepseq >= 1.3 && < 2, 
-     criterion >= 1.1 && < 2
+     deepseq >= 1.3 && < 1.4, 
+     criterion >= 1.1 && < 1.2
 
 
   if flag(useVanLaarhoven)
@@ -128,8 +136,8 @@ Benchmark eval
      mtl, 
      containers, 
      lens,
-     deepseq >= 1.3 && < 2, 
-     criterion >= 1.1 && < 2
+     deepseq >= 1.3 && < 1.4, 
+     criterion >= 1.1 && < 1.2
 
   other-modules: 
      Examples.Evaluator
