--- a/app-lens.cabal
+++ b/app-lens.cabal
@@ -12,15 +12,14 @@ description:
    support the point-free style of programming. Though concise at times,
    this style becomes less handy when programs get more complicated. 
    . 
-   This module provides the infrastructure for programming complex bidirectional transformations,
-   by representing lenses as functions that are subject to the normal applicative-style
-    programming. 
-   For example, let us consider the 'unlines' functions and to define
-   a 'lens' version of it. Assuming that we already have a lens
-   @catLineL :: Lens' (String, String) String@ that concatenates
-   two strings with a newline in the middle, in our framework we can program 
-   through pattern matching and
-   explicite recursion as usual.
+   This module provides the infrastructure for programming complex
+   bidirectional transformations, by representing lenses as functions
+   that are subject to the normal applicative-style programming.  For
+   example, let us consider the 'unlines' functions and to define a
+   'lens' version of it. Assuming that we already have a lens
+   @catLineL :: Lens' (String, String) String@ that concatenates two
+   strings with a newline in the middle, in our framework we can
+   program through pattern matching and explicit recursion as usual.
    .
    @
    unlinesF :: [L s String] -> L s String
@@ -33,7 +32,7 @@ description:
    c)@ and @new :: a -> (forall s. L s a)@ lift lenses to functions.
    The former is for binary lenses and the latter is for constant lenses.
    We can then apply lenses as functions, alleviating
-   the need of specialised combinators. 
+   the need of specialized combinators. 
    .
    Simply unlifting ('unlift', 'unlift2', 'unliftT') such "lens functions"
    gives us the desired lenses. 
@@ -50,6 +49,18 @@ description:
    >>> ["banana", "orange", "apple"] & unlinesL .~ "Banana\nOrange\nApple\n"
    ["Banana","Orange","Apple"]
    . 
+   One might have found that @unliftF@ should be defined with 'foldr'.
+   Indeed, we can use 'foldr' as below because @catLineF@ and
+   @unlinesF@ merely Haskell functions.
+   .
+   @
+   unliftF = foldr (lift2 catLineL) (new "") 
+   @  
+   . 
+   Here, the program is written in a point-free manner as the exiting
+   lens frameworks, but notice that this 'foldr' is just Haskell's
+   'foldr', instead of a combinator on lenses.
+   .
    More examples can be found at "Examples" in the source code
    <https://bitbucket.org/kztk/app-lens/downloads>.
    ==== Remark
