--- a/app-lens.cabal
+++ b/app-lens.cabal
@@ -40,12 +40,10 @@ description:
    .
    The obtained lens works as expected.
    .
-   .
-   >>> ["banana", "orange", "apple"] ^. unlinesL
-   "banana\norange\napple\n"
-   >>> ["banana", "orange", "apple"] & unlinesL .~ "Banana\nOrange\nApple\n"
-   ["Banana","Orange","Apple"]
-   .
+   > >>> ["banana", "orange", "apple"] ^. unlinesL
+   > "banana\norange\napple\n"
+   > >>> ["banana", "orange", "apple"] & unlinesL .~ "Banana\nOrange\nApple\n"
+   > ["Banana","Orange","Apple"]
    .   
    One may prefer to define @unliftF@ with 'foldr'. Indeed, we can
    use 'foldr' as below because @catLineF@ and @unlinesF@ are simply
@@ -60,8 +58,7 @@ description:
    More examples can be found at \"Examples\" in the source code
    <https://bitbucket.org/kztk/app-lens/downloads>.
    . 
-   === Remark
-   .
+   /Remark/.
    The applicative-style programming is possible in our implementation 
    because a function representation different from Kmett's is used for lenses.
    As a result, when we program record-field access chains such as 
