--- a/app-lens.cabal
+++ b/app-lens.cabal
@@ -45,11 +45,11 @@ description:
    > >>> ["banana", "orange", "apple"] & unlinesL .~ "Banana\nOrange\nApple\n"
    > ["Banana","Orange","Apple"]
    .   
-   One may prefer to define @unliftF@ with 'foldr'. Indeed, we can
+   One may prefer to define @unlinesF@ with 'foldr'. Indeed, we can
    use 'foldr' as below because @catLineF@ and @unlinesF@ are simply
    Haskell functions.
    .
-   > unliftF = foldr (lift2 catLineL) (new "") 
+   > unlinesF = foldr (lift2 catLineL) (new "") 
    .
    Here, the program is written in a point-free manner similar to that
    of the other lens frameworks. But note that this 'foldr' is just
