--- a/app-lens.cabal
+++ b/app-lens.cabal
@@ -82,6 +82,8 @@ license-file:        LICENSE
 homepage:            https://bitbucket.org/kztk/app-lens
 bug-reports:         https://bitbucket.org/kztk/app-lens/issues
 tested-with:         GHC == 7.8.3
+                   , GHC == 7.8.4
+                   , GHC == 7.10.2
 
 author:              Kazutaka Matsuda
 copyright:           (c) Kazutaka Matsuda, 2015
@@ -118,10 +120,10 @@ Library
     DeriveDataTypeable, DeriveFunctor, DeriveFoldable, DeriveTraversable
   
   build-depends:  
-    base       >=4.7   && < 4.8, 
+    base       >=4.7   && < 4.9, 
     containers >=0.5   && < 0.6, 
-    mtl        >=2.2   && < 2.3,
-    lens       >=4     && < 4.12
+    mtl        >=2.2   && < 2.4,
+    lens       >=4     && < 4.13
 
   default-language: Haskell2010
 
@@ -154,7 +156,7 @@ Benchmark compositions
      mtl, 
      containers, 
      lens, 
-     deepseq >= 1.3 && < 1.4, 
+     deepseq >= 1.3 && < 1.5, 
      criterion >= 1.1 && < 1.2
 
 
@@ -174,7 +176,7 @@ Benchmark eval
      mtl, 
      containers, 
      lens,
-     deepseq >= 1.3 && < 1.4, 
+     deepseq >= 1.3 && < 1.5, 
      criterion >= 1.1 && < 1.2
 
   other-modules: 
